tooling/nargo_cli/tests/snapshots/execution_success/regression_9764/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: Field, x: u32) -> pub Field {
    if a == 1_Field {
        0_Field
    } else {
        let mut d: [&mut u32; 0] = [];
        assert(0_u32 < *d[x]);
        a
    }
}
